--- a/index.html
+++ b/index.html
@@ -49,38 +49,17 @@
 	<div class="page"><img src="img/pagina 17.jpg"></div>
   </div>
 
-  <script type="text/javascript">
-  //  $("#flipbook").turn({
-  //    width: 800,
-  //    height: 500,
-  //    autoCenter: true
-  //  });
+  <script>
+    $("#flipbook").turn({
+     width: 800,
+      height: 500,
+     autoCenter: true
+    });
   
-  $(window).ready(function() {
-		$('#flipbook').turn({
-							display: 'double',
-							acceleration: true,
-							gradients: !$.isTouch,
-							elevation:50,
-							when: {
-								turned: function(e, page) {
-									/*console.log('Current view: ', $(this).turn('view'));*/
-								}
-							}
-						});
-	});
-	
-	
-	$(window).bind('keydown', function(e){
-		
-		if (e.keyCode==37)
-			$('#flipbook').turn('previous');
-		else if (e.keyCode==39)
-			$('#flipbook').turn('next');
-			
-	});
+  
   
   
   </script>
 </body>
+
 </html>
