--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
       height: 100vh;
     }
     #flipbook {
-      width: 2796px;
-      height: 2000px;
+      width: 800px;
+      height: 500px;
     }
     #flipbook. page {
-      width: 699px;
-      height: 2000px;
+      width: 400px;
+      height: 500px;
     }
     #flipbook. page img {
-      width: 25%;
-      height: 25%;
+      width: 100%;
+      height: 100%;
       object-fit: cover;
     }
   </style>
@@ -46,13 +46,13 @@
 	<div class="page"><img src="img/pagina 14.jpg"></div>
 	<div class="page"><img src="img/pagina 15.jpg"></div>
 	<div class="page"><img src="img/pagina 16.jpg"></div>
-	<div class="page"><img src="img/pagina 17.jpg"></div>
+	// <div class="page"><img src="img/pagina 17.jpg"></div>
   </div>
 
   <script>
     $("#flipbook").turn({
-     width: 1398,
-      height: 2000,
+     width: 800,
+      height: 500,
      autoCenter: true
     });
   
@@ -63,6 +63,7 @@
 </body>
 
 </html>
+
 
 
 
