--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Mi Flipbook</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
   <script src="turn.min.js"></script>
   <style>
     body {
@@ -63,6 +63,7 @@
 </body>
 
 </html>
+
 
 
 
