--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
   </div>
 
   <script>
-    $("#flipbook").turn({
-     width: 2796,
-      height: 2000,
-     autoCenter: true
+    $(document).ready(function(){
+      $("#flipbook").turn({
+        width: 2796,     // ancho total
+        height: 2000,    // alto total
+        autoCenter: true,
+        display: 'double' // páginas enfrentadas
+      });
     });
-  
-  
-  
-  
   </script>
 </body>
 
 </html>
+
 
 
 
