--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Mi Flipbook</title>
   <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-  <script src="turn.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.js"></script>
   <style>
     body {
       background: #eee;
@@ -62,6 +62,7 @@
 </body>
 
 </html>
+
 
 
 
