--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
       mobileScrollSupport: true
     });
     flip.loadFromImages([
-      'img/pagina 1.jpg',
-      'img/pagina 2.jpg',
-      'img/pagina 3.jpg',
-      'img/pagina 4.jpg',
-	  'img/pagina 5.jpg',
-	  'img/pagina 6.jpg',
-	  'img/pagina 7.jpg',
-	  'img/pagina 8.jpg',
-	  'img/pagina 9.jpg',
-	  'img/pagina 10.jpg',
-	  'img/pagina 11.jpg',
-	  'img/pagina 12.jpg',
-	  'img/pagina 13.jpg',
-	  'img/pagina 14.jpg',
-	  'img/pagina 15.jpg',
-	  'img/pagina 16.jpg'
+      "img/pagina 1.jpg",
+      "img/pagina 2.jpg",
+      "img/pagina 3.jpg",
+      "img/pagina 4.jpg",
+	  "img/pagina 5.jpg",
+	  "img/pagina 6.jpg",
+	  "img/pagina 7.jpg",
+	  "img/pagina 8.jpg",
+	  "img/pagina 9.jpg",
+	  "img/pagina 10.jpg",
+	  "img/pagina 11.jpg",
+	  "img/pagina 12.jpg",
+	  "img/pagina 13.jpg",
+	  "img/pagina 14.jpg",
+	  "img/pagina 15.jpg",
+	  "img/pagina 16.jpg"
     ]);
     const prev = document.getElementById('prevBtn');
     const next = document.getElementById('nextBtn');
